# digital_twin

./: .env.example  .gitignore  README.md  azure_connector.py  index.html  pyproject.toml  requirements.txt  server.py
assets/data/: kpi-data.json  sensor-map.json
assets/models/: room.glb  room1.glb
css/: style.css
js/: data.js  kpi.js  main.js
planimetry/: SAL_1_V2.html  map.min.css  map.min.js
