[project]
name = "digital-twin"
version = "0.1.0"
description = "3D Digital Twin dashboard with Azure IoT Hub / Azure Digital Twins integration"
requires-python = ">=3.10"
dependencies = [
    "azure-eventhub>=5.11.0",
    "azure-digitaltwins-core>=1.2.0",
    "azure-identity>=1.16.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = []
